--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-N3R5QZ');</script>
     <!-- End Google Tag Manager -->
-    <title>Интеллектуальная олимпиада - «Мозгва» для Backer Hughes</title>
+    <title>Интеллектуальная олимпиада - «Мозгва» для Baker Hughes</title>
     <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
     <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon" />
     <meta name="format-detection" content="telephone=no"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="css/media.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css?ver=2"/>
+    <link rel="stylesheet" type="text/css" href="css/media.css?ver=2"/>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 
-    <meta property="og:title" content="«Мозгва» для Backer Hughes" />
+    <meta property="og:title" content="«Мозгва» для Baker Hughes" />
     <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
-    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min.png" />
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/Frame.png" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -38,7 +38,7 @@
     </header>
     <div class="main">
       <div class="container">
-        <div class="main-title"><img class="main-title-img" src="images/title.svg" alt=""><img class="filler filler-01" src="images/filler-01.png" alt=""><img class="filler filler-02" src="images/filler-02.png" alt=""><img class="filler filler-03" src="images/filler-03.png" alt=""><img class="filler filler-04" src="images/filler-04.png" alt=""><img class="filler filler-05" src="images/filler-05.png" alt=""></div>
+        <div class="main-title"><img class="main-title-img" src="images/title-new.svg" alt=""><img class="filler filler-01" src="images/filler-01.png" alt=""><img class="filler filler-02" src="images/filler-02.png" alt=""><img class="filler filler-03" src="images/filler-03.png" alt=""><img class="filler filler-04" src="images/filler-04.png" alt=""><img class="filler filler-05" src="images/filler-05.png" alt=""></div>
         <div class="main-select select-wrap">
           <select name="select city">
             <option></option>
@@ -54,18 +54,18 @@
           <div class="main-games-month">Октябрь</div>
           <div class="main-games-wrap">
             <div class="main-games-unit main-games-unit_disabled" data-city="Тюмень">
-              <div class="main-games-unit-date">18</div>
+              <div class="main-games-unit-date">17</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Тюмень</div>
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
             <div class="main-games-unit main-games-unit_disabled" data-city="Москва">
-              <div class="main-games-unit-date">18</div>
+              <div class="main-games-unit-date">17</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Москва</div>
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
@@ -73,7 +73,7 @@
               <div class="main-games-unit-date">25</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Нижневартовск</div>
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
@@ -86,7 +86,7 @@
               <div class="main-games-unit-date">1</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Нефтеюганск</div>
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
@@ -94,7 +94,7 @@
               <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Ноябрьск</div>
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
@@ -102,7 +102,7 @@
               <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Сахалин</div>
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
@@ -139,7 +139,7 @@
           <input type="hidden" name="gameTag" id="gameTag" value="BakerHughes">
           <input type="text" name="contactName" id="contactName" placeholder="Ваше имя" required>
           <input id="inputMaskPhone" type="phone" name="contactPhone" placeholder="Телефон" required>
-          <input type="email" name="contactEmail" id="contactEmail" placeholder="Электронная почта" required>
+          <input type="email" name="contactEmail" id="contactEmail" placeholder="@bakerhughes.com" required>
           <input class="button button_orange popup-form-submit" type="submit" value="Дальше">
         </div>
       </div>
