--- a/test.html
+++ b/test.html
@@ -19,9 +19,9 @@
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 
-    <meta property="og:title" content="«Мозгва» для Backer Hughes" />
+    <meta property="og:title" content="«Мозгва» для Baker Hughes" />
     <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
-    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min.png" />
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/Frame.png" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -197,7 +197,7 @@
           <input type="hidden" name="gameTag" id="gameTag" value="BakerHughes">
           <input type="text" name="contactName" id="contactName" placeholder="Ваше имя" required>
           <input id="inputMaskPhone" type="phone" name="contactPhone" placeholder="Телефон" required>
-          <input type="email" name="contactEmail" id="contactEmail" placeholder="Электронная почта" required>
+          <input type="email" name="contactEmail" id="contactEmail" placeholder="@bakerhughes.com" required>
           <input class="button button_orange popup-form-submit" type="submit" value="Дальше">
         </div>
       </div>
