--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/scripts.js"></script>
     <meta property="og:title" content="«Мозгва» для Backer Hughes"/>
     <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете"/>
-    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min"/>
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/Frame.png"/>
   </head>
   <body><!-- Google Tag Manager (noscript) -->
     <noscript>
