--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <header class="header">
       <div class="container">
         <div class="header-wrap">
-          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""/></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""/></a></div>
-          <div class="header-title">Интеллектуальная олимпиада</div><a class="button button_orange header-button" href="/test.html">Не смогу участвовать</a>
+          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""/></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""/></a></div><a class="button button_orange header-button" href="/test.html">Не смогу участвовать</a>
         </div>
       </div>
     </header>
     <div class="main">
       <div class="container">
-        <div class="main-title"><img class="main-title-img" src="images/title-new.svg" alt=""><img class="filler filler-01" src="images/filler-01.png" alt=""><img class="filler filler-02" src="images/filler-02.png" alt=""><img class="filler filler-03" src="images/filler-03.png" alt=""><img class="filler filler-04" src="images/filler-04.png" alt=""><img class="filler filler-05" src="images/filler-05.png" alt=""></div>
+        <div class="main-title"><img class="main-title-img" src="images/title-new.svg" alt=""><img class="filler filler-01" src="images/filler-01.png" alt=""><img class="filler filler-02" src="images/filler-02.png" alt=""><img class="filler filler-03" src="images/filler-03.png" alt=""><img class="filler filler-04" src="images/filler-04.png" alt=""><img class="filler filler-05" src="images/filler-05.png" alt=""><img class="filler filler-08" src="images/filler-08.svg" alt=""></div>
         <div class="main-select select-wrap">
           <select name="select city">
             <option></option>
