--- a/test.html
+++ b/test.html
@@ -218,14 +218,154 @@
           </div>
         </div>
       </div>
-      <div class="test-main-introUnit test-main-introUnit_01">
-        <div class="test-main-introUnit-container">
-          <div class="test-main-introUnit-image"><img src="images/tour-main-image-01.png" alt=""></div>
-          <div class="test-main-introUnit-info">
-            <div class="test-main-introUnit-navigation"><span>Сейчас</span><span class="test-main-introUnit-navigation-divider"></span><span>Тур №1</span></div>
-            <div class="test-main-introUnit-title">«Факты»</div>
-            <div class="test-main-introUnit-text">В этом туре будут вопросы обо всем. Не обязательно держать руку на старой энциклопедии. Не лишним было бы еще и на справочнике орнитолога подержать.</div>
-            <div class="test-main-introUnit-button button button_orange">Начать</div>
+      <div class="test-main-segment test-main-segment_01">
+        <div class="test-main-introUnit test-main-introUnit_01">
+          <div class="test-main-introUnit-container">
+            <div class="test-main-introUnit-image"><img src="images/tour-main-image-01.png" alt=""></div>
+            <div class="test-main-introUnit-info">
+              <div class="test-main-introUnit-navigation"><span>Сейчас</span><span class="test-main-introUnit-navigation-divider"></span><span>Тур №1</span></div>
+              <div class="test-main-introUnit-title">«Факты»</div>
+              <div class="test-main-introUnit-text">В этом туре будут вопросы обо всем. Не обязательно держать руку на старой энциклопедии. Не лишним было бы еще и на справочнике орнитолога подержать.</div>
+              <div class="test-main-introUnit-button button button_orange">Начать</div>
+            </div>
+          </div>
+        </div>
+        <div class="test-main-unit">
+          <div class="test-main-unit-header">
+            <div class="test-main-unit-header-wrap">
+              <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
+              <div class="test-main-unit-header-info">
+                <div class="test-main-unit-header-info-image"><img src="images/tour-main-image-03.png" alt=""></div>
+                <div class="test-main-unit-header-info-title">Тур 1 «Шоу МозгоOn»</div>
+                <div class="test-main-unit-header-info-counter">
+                  <div class="test-content-progress">
+                    <div class="test-content-progress-title"><span class="current">1</span>/6</div>
+                    <div class="test-content-progress-wrap">
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="test-main-unit-body">
+            <div class="test-main-container">
+              <div class="test-main-sidebar"></div>
+              <div class="test-main-body">
+                <div class="test-main-body-unit">
+                  <div class="test-main-body-unit-wrap">
+                    <div class="test-main-body-images">
+                      <div class="test-main-body-images-body">
+                        <div class="test-main-body-images-wrap test-main-body-images-wrap_beforeAnswer">
+                          <div class="test-main-body-images-unit"><img src="images/tour1/1-5_V.png" alt=""></div>
+                          <div class="test-main-body-images-unit"><img src="images/tour1/1-10_O.jpg" alt=""></div>
+                          <div class="test-main-body-images-unit"><img src="images/tour1/1-11_O.jpg" alt=""></div>
+                        </div>
+                        <div class="test-main-body-images-wrap test-main-body-images-wrap_beforeAnswer">
+                          <div class="test-main-body-images-unit"><img src="images/tour1/1-5_V.png" alt=""></div>
+                        </div>
+                      </div>
+                      <div class="test-main-body-images-controls">
+                        <div class="test-main-body-images-controls-unit test-main-body-images-controls-unit_prev"></div>
+                        <div class="test-main-body-images-controls-unit test-main-body-images-controls-unit_next"></div>
+                      </div>
+                    </div>
+                    <div class="test-main-body-text">В Венеции с 1993 года действует налог, связанный с необходимостью экономии и рационального использования дефицитного «места на суше». Налогом обложили многочисленные летние ресторанчики и лавки. Налог на что должны уплачивать владельцы таких заведений?</div>
+                  </div>
+                  <div class="test-main-body-footer">
+                    <div class="test-main-body-footer-answers">
+                      <div class="test-main-body-footer-answers-unit test-main-body-footer-answers-unit_correct">Слезы</div>
+                      <div class="test-main-body-footer-answers-unit">Вариант ответа</div>
+                      <div class="test-main-body-footer-answers-unit">Вариант ответа</div>
+                      <div class="test-main-body-footer-answers-unit">Вариант ответа в две строчки</div>
+                    </div>
+                    <div class="test-main-body-footer-results">
+                      <div class="test-main-body-footer-results-info">
+                        <div class="test-main-body-footer-results-info-title">Слезы</div>
+                        <div class="test-main-body-footer-results-info-text">
+                          <div class="test-main-body-footer-results-info-text-inner test-main-body-footer-results-info-text-inner_correct">Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».</div>
+                          <div class="test-main-body-footer-results-info-text-inner test-main-body-footer-results-info-text-inner_wrong">Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».</div>
+                        </div>
+                      </div>
+                      <div class="test-main-body-footer-results-button"> <span>Следующий вопрос</span></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="test-main-unit">
+          <div class="test-main-unit-header">
+            <div class="test-main-unit-header-wrap">
+              <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
+              <div class="test-main-unit-header-info">
+                <div class="test-main-unit-header-info-image"><img src="images/tour-main-image-03.png" alt=""></div>
+                <div class="test-main-unit-header-info-title">Тур 1 «Шоу МозгоOn»</div>
+                <div class="test-main-unit-header-info-counter">
+                  <div class="test-content-progress">
+                    <div class="test-content-progress-title"><span class="current">1</span>/6</div>
+                    <div class="test-content-progress-wrap">
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                      <div class="test-content-progress-unit"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="test-main-unit-body">
+            <div class="test-main-container">
+              <div class="test-main-sidebar"></div>
+              <div class="test-main-body">
+                <div class="test-main-body-unit">
+                  <div class="test-main-body-unit-wrap">
+                    <div class="test-main-body-images">
+                      <div class="test-main-body-images-body">
+                        <div class="test-main-body-images-wrap test-main-body-images-wrap_beforeAnswer">
+                          <div class="test-main-body-images-unit"><img class="filler" src="images/main-question-filler.png" alt=""></div>
+                        </div>
+                        <div class="test-main-body-images-wrap test-main-body-images-wrap_beforeAnswer">
+                          <div class="test-main-body-images-unit"><img src="images/tour1/1-5_V.png" alt=""></div>
+                        </div>
+                      </div>
+                      <div class="test-main-body-images-controls">
+                        <div class="test-main-body-images-controls-unit test-main-body-images-controls-unit_prev"></div>
+                        <div class="test-main-body-images-controls-unit test-main-body-images-controls-unit_next"></div>
+                      </div>
+                    </div>
+                    <div class="test-main-body-text">В Венеции с 1993 года действует налог, связанный с необходимостью экономии и рационального использования дефицитного «места на суше». Налогом обложили многочисленные летние ресторанчики и лавки. Налог на что должны уплачивать владельцы таких заведений?</div>
+                  </div>
+                  <div class="test-main-body-footer">
+                    <div class="test-main-body-footer-answers">
+                      <div class="test-main-body-footer-answers-unit test-main-body-footer-answers-unit_correct">Слезы</div>
+                      <div class="test-main-body-footer-answers-unit">Вариант ответа</div>
+                      <div class="test-main-body-footer-answers-unit">Вариант ответа</div>
+                      <div class="test-main-body-footer-answers-unit">Вариант ответа в две строчки</div>
+                    </div>
+                    <div class="test-main-body-footer-results">
+                      <div class="test-main-body-footer-results-info">
+                        <div class="test-main-body-footer-results-info-title">Слезы</div>
+                        <div class="test-main-body-footer-results-info-text">
+                          <div class="test-main-body-footer-results-info-text-inner test-main-body-footer-results-info-text-inner_correct">Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».</div>
+                          <div class="test-main-body-footer-results-info-text-inner test-main-body-footer-results-info-text-inner_wrong">Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».</div>
+                        </div>
+                      </div>
+                      <div class="test-main-body-footer-results-button"> <span>Следующий вопрос</span></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
