--- a/test.html
+++ b/test.html
@@ -368,7 +368,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -574,7 +574,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -1218,7 +1218,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -1424,7 +1424,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -1643,7 +1643,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -1849,7 +1849,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -2068,7 +2068,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
@@ -2274,7 +2274,7 @@
             </div>
           </div>
         </div>
-        <div class="test-main-unit test-main-unit_noImage">
+        <div class="test-main-unit">
           <div class="test-main-unit-header">
             <div class="test-main-unit-header-wrap">
               <div class="test-main-unit-header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""></a><a class="header-logo header-logo_02" href="https://mozgva.com"><img src="images/mzgv-logo.svg" alt=""></a></div>
