--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Нижневартовск">
               <div class="main-games-unit-date">25</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Нижневартовск</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place game-with-adress">Нижневартовск «Трактиръ на Северной» улица Северная, 9 п / 2</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
