добавил адреса кабаков

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Нефтеюганск">
               <div class="main-games-unit-date">1</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Нефтеюганск</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place game-with-adress">Нефтеюганск, Сургутская ул., 1/23, помещение РК «Империя»</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -82,7 +82,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Ноябрьск">
               <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Ноябрьск</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place game-with-adress">Ноябрьск, ул.Холмогорская, 17, помещение ресторана «Мечта»</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -90,7 +90,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Сахалин">
               <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Сахалин</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place game-with-adress">Сахалин, Железнодорожная ул., 166Б, помещение ресторана Fingerbar</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
