--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
+            <div class="main-games-unit main-games-unit_disabled" data-city="Тюмень">
+              <div class="main-games-unit-date">27</div>
+              <div class="main-games-unit-info">
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place game-with-adress">Тюмень, ул. 50 лет Октября, 8Б, Деловой дом «Петр Столыпин», помещение ресторана «Максимилианс»</div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">18:00</div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="main-info">
