попап со списком команд

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
             <div class="main-games-unit main-games-unit_disabled" data-city="Тюмень">
+              <div class="main-games-unit-list">Список команд</div>
               <div class="main-games-unit-date">27</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place game-with-adress">Тюмень, ул. 50 лет Октября, 8Б, Деловой дом «Петр Столыпин», помещение ресторана «Максимилианс»</div>
@@ -144,6 +145,70 @@
       <div class="popup-wrap">
         <div class="popup-title">Спасибо за регистрацию!</div>
       </div>
+    </div>
+    <div class="popup popup_list ">
+      <div class="popup-wrap">
+          <div class="popup_list-header">
+            <div class="popup_list-header-title" >13 команд</div>
+            <div class="popup_list-header-controls">
+             
+              <div class="popup_list-header-controls-close popup-close"></div>
+            </div>
+          </div>
+          <table  class="popup_list-table">
+            <tr>
+              <td >
+                <img src="images/icon-stats.svg" alt="">
+              </td>
+              <td> Команда</td>
+            </tr>
+            <tr>
+              <td class="popup_list-table-subtitle" colspan="10">Москва</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Кстати, а где Самигуллин?</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Mas o menos</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Шустрые долота!</td>
+            </tr>
+            <tr>
+              <td class="popup_list-table-subtitle" colspan="10">Тюмень</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Варенье</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Лучшие друзья Эйнштейна</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Склад</td>
+            </tr>
+            <tr>
+              <td class="popup_list-table-subtitle" colspan="10">Нижневартовск</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Шпагаты</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Фильеры</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Саквояж</td>
+            </tr>
+          </table>
+      </div> 
     </div>
   </body>
 </html>
