--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/media.css?ver=4"/>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-    <meta property="og:title" content="«Мозгва» для Baker Hughes"/>
+    <meta property="og:title" content="«Мозгва» для Backer Hughes"/>
     <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете"/>
     <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/Frame.png"/>
   </head>
